# snake-game

./: .gitignore  CMakeLists.txt  Makefile  main.cpp
core/: app.cpp  app.hpp  color.hpp  main.cpp  object.cpp  object.hpp  vector.cpp  vector.hpp  window.cpp  window.hpp
creact/: CMakeLists.txt
creact/include/: app.h  color.h  creact.h  element.h  hook.h  key.h  vector.h
creact/private/: AppData.cpp  AsyncHandler.cpp  Input.hpp
creact/public/: App.cpp  Color.hpp  LifeCycle.cpp  Object.cpp  Property.hpp  Scene.cpp  Scene.hpp
creact/src/: app.cpp  color.cpp  element.cpp  vector.cpp
framework/: core.cpp  core.hpp  framework.hpp  main.cpp  main.hpp
framework/core/: App.cpp  App.hpp  Object.hpp  Property.hpp  PropertyEvent.hpp  Window.cpp  Window.hpp  app.cpp  app.hpp  border.cpp  border.hpp  color.cpp  color.hpp  input.cpp  input.hpp  label.cpp  label.hpp  object.cpp  object.hpp  optional.hpp  property.hpp  state.hpp  vector.cpp  vector.hpp  window.cpp  window.hpp
framework/internal/: AppData.cpp  AppData.hpp  ColorUtility.cpp  ColorUtility.hpp  ExitException.hpp  Input.cpp  Input.hpp  WindowData.cpp  WindowData.hpp
framework/private/: AppData.cpp  AppData.hpp  AsyncHandler.cpp  AsyncHandler.hpp  ColorUtility.cpp  ColorUtility.hpp  ExitException.hpp  Input.cpp  Input.hpp
framework/public/: App.cpp  App.hpp  Key.hpp  LifeCycle.cpp  LifeCycle.hpp  Object.cpp  Object.hpp  Property.hpp  PropertyEvent.cpp  PropertyEvent.hpp  Scene.cpp  Scene.hpp  Vector.cpp  Vector.hpp
framework/scripts/: App.hpp  Object.cpp  Object.hpp  Window.cpp  Window.hpp
framework/util/: color.cpp  color.hpp  vector.hpp
framework/utils/: color.cpp  color.hpp  event.cpp  event.hpp  optional.cpp  optional.hpp  vector.cpp  vector.hpp
include/: object.h  scenes.h
src/: CMakeLists.txt  app.cpp  main.cpp  main.hpp
src/app/: myApp.cpp
src/data/: map0.txt  map1.txt
src/elements/: title.hpp
src/libs/: map.cpp  map.hpp
src/objects/: counter.cpp  field.cpp  logger.cpp  myObject.cpp  snake.cpp  title.cpp  wall.cpp
src/scenes/: gameScene.cpp  introScene.cpp  main.hpp  myScene.cpp  quitScene.cpp  resultScene.cpp
src/windows/: mainWindow.cpp  mainWindow.hpp  myWindow.cpp
